sizing issue when screen is too large so changed back

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,6 @@
 body {
   background-color: var(--blackish-color);
   font-family: var(--primary-font);
-  padding: 0 300px;
 }
 
 /*target header, hero */
@@ -231,9 +230,6 @@ footer p {
 
 /* targeting changes for when screen is smaller, responsive */
 @media (max-width: 960px) {
-  body {
-    padding: 0;
-  }
   header {
     padding: 60px 0;
   }
